Logo no longer dissapears on small shit screens (mobile)

--- a/ladyfingers.css
+++ b/ladyfingers.css
@@ -13,7 +13,7 @@ body {
 
 
 /*************************** header ***************************/
-#site_header_logo_white {position:absolute;top:0.5em;left:0;text-align:center;width:100%;}
+#site_header_logo_white {position:absolute;top:0.5em;left:0;text-align:center;width:100%;z-index:2;}
 #site_header_logo_white img {height:90px;}
 #site_header_follow_white {
   position:absolute;top:2em;left:1em;
@@ -28,7 +28,7 @@ body {
   padding:0 1em;
 }
 
-#site_header_logo_black {position:absolute;top:0.5em;left:0;text-align:center;width:100%;}
+#site_header_logo_black {position:absolute;top:0.5em;left:0;text-align:center;width:100%;z-index:2;}
 #site_header_logo_black img {height:90px;}
 #site_header_follow_black {
   position:absolute;top:2em;left:1em;
@@ -863,6 +863,10 @@ footer #copyright {
 
 @media screen and (max-width: 414px) {
   #site_header_follow_black_menu,#site_header_follow_black,#site_header_follow_white {left:-100vw;}
+  #site_header_logo_white img, #site_header_logo_black img {height:60px;}
+      #site_header_logo_black_menu img {
+      height:60px;
+    }
   #site_header video {
     position: relative;
     right: 20em;
